--- a/index.html
+++ b/index.html
@@ -57,15 +57,21 @@
 
 	<div id="mid1">
 
-		<div id="galeria">
 
-			<div class="galimagenes">
+		<div class="contenedorGaleria">
+			<div id="galeria">
 
-			
+				<div class="galimagenes">
+				<div><img src="img/imagen1_400_200.jpg"></div>
+				<div><img src="img/imagen2.jpg"></div>
+				<div><img src="img/imagen3_b.jpg"></div>
+				<div><img src="img/imagen44 (1).jpg"></div>
+
+					
+				</div>
+
 			</div>
-
-		</div>
-
+		</div>	
 
 		<div id="noticia">
 
@@ -79,6 +85,7 @@
 
 	</div>
 
+	<p class="limpiar"></p>
 
 	<div id="mid2">
 
@@ -154,8 +161,7 @@
 			</li>
 
 			<li class="parte1"  id="mapa">
-				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d915.5115437589538!2d-0.4403632643461413!3d39.48284764030792!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd604ff779223b39%3A0xc60596edf6e35ebd!2sCentro%20de%20FP%20SOLVAM!5e0!3m2!1ses!2ses!4v1684269400071!5m2!1ses!2ses" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-			</li>
+				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3304.211303837088!2d-118.33200333713478!3d34.08972695074769!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2bf337032e6bd%3A0x9f8884792eb5203e!2sGold&#39;s%20Gym!5e0!3m2!1ses!2ses!4v1684610688597!5m2!1ses!2ses" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>			</li>
 
 			<li class="parte1"  id="latestposts">
 			<h3>LATEST POSTS</h3>
