Acabado detalles.html y estructurado proyecto

--- a/index.html
+++ b/index.html
@@ -92,42 +92,42 @@
 
 		<div class="noticia1" id="images">
 			
-			<div class="imagen">imagen<div class="botones"><h3 class="lupa"></h3><h3 class="categorias"></h3></div></div>
+			<div class="imagen">imagen<div class="botones"><a href="#" class="lupa"></a><a href="detalles.html" class="categorias"></a></div></div>
 			<div class="textodebajo"><p>TITULO</p><p>subtitulo</p></div>
 
 		</div>
 		<div class="noticia2" id="images">
 			
-			<div class="imagen">imagen<div class="botones"><h3 class="lupa"></h3><h3 class="categorias"></h3></div></div>
+			<div class="imagen">imagen<div class="botones"><a href="#" class="lupa"></a><a href="detalles.html" class="categorias"></a></div></div>
 			<div class="textodebajo"><p>TITULO</p><p>subtitulo</p></div>
 		</div>
 		<div class="noticia3" id="images">
 			
-			<div class="imagen">imagen<div class="botones"><h3 class="lupa"></h3><h3 class="categorias"></h3></div></div>
+			<div class="imagen">imagen<div class="botones"><a href="#" class="lupa"></a><a href="detalles.html" class="categorias"></a></div></div>
 			<div class="textodebajo"><p>TITULO</p><p>subtitulo</p></div>
 		</div>
 		<div class="noticia4" id="images">
 			
-			<div class="imagen">imagen<div class="botones"><h3 class="lupa"></h3><h3 class="categorias"></h3></div></div>
+			<div class="imagen">imagen<div class="botones"><a href="#" class="lupa"></a><a href="detalles.html" class="categorias"></a></div></div>
 			<div class="textodebajo"><p>TITULO</p><p>subtitulo</p></div>
 		</div>
 		<div class="noticia5" id="images">
 			
-			<div class="imagen">imagen<div class="botones"><h3 class="lupa"></h3><h3 class="categorias"></h3></div></div>
+			<div class="imagen">imagen<div class="botones"><a href="#" class="lupa"></a><a href="detalles.html" class="categorias"></a></div></div>
 			<div class="textodebajo"><p>TITULO</p><p>subtitulo</p></div>
 		</div>
 		<div class="noticia6" id="images">
 			
-			<div class="imagen">imagen<div class="botones"><h3 class="lupa"></h3><h3 class="categorias"></h3></div></div>
+			<div class="imagen">imagen<div class="botones"><a href="#" class="lupa"></a><a href="detalles.html" class="categorias"></a></div></div>
 			<div class="textodebajo"><p>TITULO</p><p>subtitulo</p></div>
 		</div>
 		<div class="noticia7" id="images">
 			
-			<div class="imagen">imagen<div class="botones"><h3 class="lupa"></h3><h3 class="categorias"></h3></div></div>
+			<div class="imagen">imagen<div class="botones"><a href="#" class="lupa"></a><a href="detalles.html" class="categorias"></a></div></div>
 			<div class="textodebajo"><p>TITULO</p><p>subtitulo</p></div>
 		</div>
 		<div class="noticia8" id="images">
-			<div class="imagen">imagen<div class="botones"><h3 class="lupa"></h3><h3 class="categorias"></h3></div></div>
+			<div class="imagen">imagen<div class="botones"><a href="#" class="lupa"></a><a href="detalles.html " class="categorias"></a></div></div>
 			<div class="textodebajo"><p>TITULO</p><p>subtitulo</p></div>
 		</div>
 
@@ -151,11 +151,11 @@
 				<p>Quart de poblet, Valencia</p>
 				<div class="zonaredes">
 					
-					<h1 class="fbook"></h1>
-					<h1 class="tw"></h1>
-					<h1 class="red"></h1>
-					<h1 class="wifi"></h1>
-					<h1 class="arbol"></h1>
+					<a target="_blank" href="https://www.facebook.com/goldsgym" class="fbook"></a>
+					<a href="https://twitter.com/GoldsGym" target="_blank" class="tw"></a>
+					<a class="red"></a>
+					<a class="wifi"></a>
+					<a class="arbol"></a>
 
 				</div>
 			</li>
