--- a/detalles.html
+++ b/detalles.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
@@ -40,7 +40,7 @@
                     <li id="hover"><a href="#">FEATURES</a></li>
                     <li id="hover"><a href="#">PAGES</a></li><li class="imagen2"></li>
                     <li id="hover"><a href="#">GALLERY</a></li><li class="imagen3"></li>
-                    <li id="hover"><a href="#">BLOG</a></li><li class="imagen4"></li>
+                    <li id="hover"><a href="blog.html">BLOG</a></li><li class="imagen4"></li>
                     <li id="hover"><a href="#">CONTACT</a></li>
     
     
