--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 				<li id="hover"><a href="index.html">HOME</a></li> <li class="imagen"></li>
 				<li id="hover"><a href="#">FEATURES</a></li>
 				<li id="hover"><a href="#">PAGES</a></li><li class="imagen2"></li>
-				<li id="hover"><a href="#">GALLERY</a></li><li class="imagen3"></li>
-				<li id="hover"><a href="#">BLOG</a></li><li class="imagen4"></li>
+				<li id="hover"><a href="http://dangomez.com.es:8080/dangomez/Web/webapp/Validacion.jsp">ENTRAR</a></li><li class="imagen3"></li>
+				<li id="hover"><a href="blog.html">BLOG</a></li><li class="imagen4"></li>
 				<li id="hover"><a href="#">CONTACT</a></li>
 
 
