--- a/blog.html
+++ b/blog.html
@@ -100,17 +100,53 @@
 
 		<div class="busqueda">
 
-			<input type="search">
+			<input type="search" placeholder="Buscar">
+			<input type="button">
 
 
 
+			<h2 class="primero">Categorias</h2>
+			<ul class="categorias">
+				<a href="#"></a><li>Categoria1</li>
+				<a href="#"></a><li>Categoria2</li>
+				<a href="#"></a><li>Categoria3</li>
+				<a href="#"></a><li>Categoria4</li>
 
+			</ul>
 
+			<h2 class="segundo">Post Populares</h2>
+			<ul class="posts">
+				<li><div class="imagenPost"></div></li>
+				<li><a class="primer" href="#">Titulo del post popular</a></li>
+				<li><a class="segundo" >Categoria del post</a></li>
+			</ul>
+			
+			<p class="limpiar"></p>
 
+			<ul class="posts2">
+				<li><div class="imagenPost"></div></li>
+				<li><a class="primer" href="#">Titulo del post popular</a></li>
+				<li><a class="segundo" >Categoria del post</a></li>
+			</ul>
 
+			<p class="limpiar"></p>
 
+			<ul class="posts3">
+				<li><div class="imagenPost"></div></li>
+				<li><a class="primer" href="#">Titulo del post popular</a></li>
+				<li><a class="segundo" >Categoria del post</a></li>
+			</ul>
+			<p class="limpiar"></p>
 
+			<ul class="posts4">
+				<li><div class="imagenPost"></div></li>
+				<li><a class="primer" href="#">Titulo del post popular</a></li>
+				<li><a class="segundo" >Categoria del post</a></li>
+			</ul>
+			<p class="limpiar"></p>
 
+			<h2 class="video">Video</h2>
+			<iframe width="328" height="115" src="https://www.youtube.com/embed/HP_l2yLg_WA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 
 
